--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -5,9 +5,10 @@
     height: 100%;
     box-sizing: border-box;
     position: relative;
+    overflow: hidden;
 }
 
-.Main .inner { 
+.Main .inner {
     padding-left: 80px;
 }
 
@@ -27,11 +28,11 @@
 }
 
 .Main .menu .title-block {
-    margin-bottom: 70px;
+    margin-bottom: 50px;
 }
 
 .Main .menu-list {
-    margin-bottom: 120px;
+    margin-bottom: 100px;
     display: grid;
     gap: 24px;
     grid-template-columns: repeat(2, 216px);
@@ -54,13 +55,55 @@
 }
 
 .Main .menu-list li img {
-    width: 86px;
-    margin-bottom: 20px;
+    width: 122px;
+    margin-bottom: 8px;
 }
 
 .Main .menu-list li p {
     font-size: 22px;
     font-weight: 500;
+    line-height: 1.3;
+    text-align: center;
+}
+
+.Main .product .title-block {
+    margin-bottom: 50px;
+}
+
+.Main .product-list {
+    display: flex;
+    width: 468px;
+    flex-wrap: wrap;
+}
+
+.Main .product-list li {
+    text-align: center;
+    width: 136px;
+    margin-right: 30px;
+    margin-bottom: 40px;
+}
+
+.Main .product-list li:nth-child(3n) {
+    margin-right: 0;
+}
+
+.Main .product-list li img {
+    width: 90px;
+    margin-bottom: 18px;
+}
+
+.Main .product-list li p {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.Main .product-list li p.name {
+    margin-bottom: 16px;
+}
+
+.Main .product-list li p.price {
+    color: #ffc222;
+    font-weight: 700;
 }
 
 .Main .side-bar {
