--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -5,7 +5,8 @@
     height: 100%;
     box-sizing: border-box;
     position: relative;
-    overflow: hidden;
+    overflow-y: scroll;
+    padding-bottom: 40px;
 }
 
 .Main .inner {
@@ -14,7 +15,7 @@
 
 .Main .logo {
     width: 102px;
-    margin-bottom: 160px;
+    margin-bottom: 140px;
 }
 
 .Main .title {
@@ -61,7 +62,7 @@
 
 .Main .menu-list li p {
     font-size: 22px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 1.3;
     text-align: center;
 }
@@ -73,6 +74,7 @@
 .Main .product-list {
     display: flex;
     width: 468px;
+    height: 400px;
     flex-wrap: wrap;
 }
 
@@ -107,20 +109,21 @@
 }
 
 .Main .side-bar {
-    position: absolute;
+    position: fixed;
     z-index: 10;
-    right: 0;
+    right: 50%;
     top: 0;
+    transform: translateX(447px);
     background-color: #fbfbf9;
     height: 100%;
     box-sizing: border-box;
     width: 272px;
-    border-left: 1px solid #f8f8f8;
-    padding: 346px 16px 0;
+    border-left: 2px solid #f8f8f8;
+    padding: 286px 28px 0;
 }
 
 .Main .side-bar .title-block {
-    padding: 0 30px;
+    padding: 0 18px 64px;
 }
 
 .Main .side-bar .title-block .title {
@@ -133,4 +136,117 @@
     font-size: 24px;
     font-weight: 400;
     color: #727270;
+}
+
+.Main .side-bar .cart-list {
+    border-top: 2px solid #eeeeee;
+    border-bottom: 2px solid #eeeeee;
+    height: 996px;
+    overflow-y: scroll;
+}
+
+.Main .side-bar .cart-list li {
+    padding-top: 26px;
+    text-align: center;
+}
+
+.Main .side-bar .cart-list li .pic {
+    width: 70px;
+    height: 70px;
+    border-radius: 16px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 18px;
+}
+
+.Main .side-bar .cart-list li .pic img {
+    width: 45px;
+    height: 45px;
+}
+
+.Main .side-bar .cart-list li p {
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.Main .side-bar .cart-list li .name {
+    margin-bottom: 18px;
+    font-weight: 600;
+}
+
+.Main .side-bar .cart-list li .price {
+    color: #535353;
+    margin-bottom: 22px;
+}
+
+.Main .side-bar .cart-list .quantity-block {
+    display: flex;
+    justify-content: center;
+    border-bottom: 2px solid #eeeeee;
+    padding-bottom: 30px;
+}
+
+.Main .side-bar .cart-list .quantity-block button {
+    width: 45px;
+    height: 32px;
+    border-radius: 12px;
+    border: none;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+}
+
+.Main .side-bar .cart-list .quantity-block .btn-minus {
+    border: 2px solid #ededed;
+    background-color: #fbfbf9;
+}
+
+.Main .side-bar .cart-list .quantity-block .btn-plus {
+    background-color: #ffca40;
+}
+
+.Main .side-bar .cart-list .quantity-block .quantity {
+    width: 50px;
+    font-size: 18px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+.Main .side-bar .total-price-block {
+    text-align: center;
+    padding-top: 64px;
+}
+
+.Main .side-bar .total-price-block .title {
+    font-size: 24px;
+    font-weight: 400;
+    color: #727270;
+    margin-bottom: 26px;
+}
+
+.Main .side-bar .total-price-block .total-price {
+    font-size: 44px;
+    font-weight: 600;
+    margin-bottom: 66px;
+}
+
+.Main .side-bar .total-price-block .btn-submit {
+    width: 168px;
+    height: 168px;
+    background-color: #ffca40;
+    border-radius: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    margin: 0 auto;
+    font-size: 26px;
+    font-weight: 600;
 }
